fixed bug where clicking on ios would trigger hover effect

--- a/style.css
+++ b/style.css
@@ -610,6 +610,9 @@ p.channel_title {
     border-right: 4px solid #fff;
     font-weight: 400
 }
+.medium, .fixed {
+    cursor: pointer;
+}
 .medium p.video_title{
     right: 10%;
     top: 6%;
@@ -643,10 +646,12 @@ p.channel_title {
 
 .grid-item-f:hover .hover_effect, .grid-item:hover .hover_effect{
     display: block;
+    visibility: visible;
 }
 
 .hover_effect {
     display: none;
+    visibility: hidden;
     position: absolute;
     top: 0;
     left: 0;
@@ -720,5 +725,9 @@ a.btn-floating.btn-large{
     }
     #update_div{
         right:83%;
+    }
+    .grid-item-f:hover .hover_effect, .grid-item:hover .hover_effect{
+        display: none;
+        visibility: hidden;
     }
 }
